log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgen-svc
  namespace: hashgen
spec:
  selector:
    app.kubernetes.io/name: hashgen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
